fix gap grid reasons for extra mediaquery

--- a/_src/assets/scss/layout/_section_reasons.scss
+++ b/_src/assets/scss/layout/_section_reasons.scss
@@ -50,4 +50,7 @@
         grid-template-columns: repeat(3, 1fr);
         grid-gap: 40px;
     }
+    @media all and (min-width: 1230px) {
+        grid-gap: 60px;
+    }
 }
